2001-11-18  Glynn Foster  <glynn.foster@sun.com>

	* applet.c: * basep-widget.c: * basep-widget.h: * button-widget.c: 
	* button-widget.h: * drawer-widget.c: * drawer-widget.h:
	* drawer.c: * edge-widget.c: * edge-widget.h: * floating-widget.c: 
	* floating-widget.h: * foobar-widget.c: * foobar-widget.h: * launcher.c: 
	* logout.c: * main.c: * menu-util.c: * menu.c: * multiscreen-stuff.c: 
	* panel-applet-frame.c: * panel-widget.c: * panel-widget.h: * panel.c: 
	* panel_config.c: * session.c: * sliding-widget.c: * sliding-widget.h:
	
	Finish off moving GtkType to GType and give a more consistant approach
	to all the header stuff.

Sun Nov 18 00:52:58 2001  George Lebl <jirka@5z.com>

	* Makefile.am, main.c:  set the standard gnome program properties

	* gnome-run.c, menu.c, panel-util.[ch]:  A little bit of
	  s/GnomeDialog/GtkDialog/

	* panel-util.[ch]: error box is now actually closable,
	  added an info box, and function to make dialog 'busy'

	* main.c, menu-fentry.[ch]: whack the mem chunks stuff

	* menu-fentry.c, menu.c, quick-desktop-item.[ch]: Lookup icons
	  before loading them, not during the creation of the menus

	* menu.c: convert one more ditem usage to qitem

	* menu-properties.c: get rid of gnome_icon_entry_gtk_entry usage

Fri Nov 16 22:13:22 2001  George Lebl <jirka@5z.com>

	* quick-desktop-reader.[ch], Makefile.am, gnome-run.c, menu-fentry.c:
	  Implement a quick no-frills .desktop reader to make reading
	  .desktop files quicker and less memory heavy.

	* gnome-run.c, menu.c: use the NO_TRANSLATIONS flag of gnome-desktop
	  where appropriate

	* applet.c, foobar-widget.c, global-keys.c, gnome-run.c,
	  menu-fentry.c, menu-properties.c, menu.c, panel.c, 
	  session.c, panel-util.[ch]: move to g_path_is_absolute,
	  g_find_program_in_path, g_shell_parse_argv and
	  g_ascii_strcasecmp

	* gnome-run.c: whack the usage of gnome-pixmap

Fri Nov 16 13:47:27 2001  George Lebl <jirka@5z.com>
