@@ -1,3 +1,7 @@
+Sun Nov 18 18:57:34 2001  George Lebl <jirka@5z.com>
+
+	* swallow.c, extern.c: a bit of s/GnomeDialog/GtkDialog/
+
 2001-11-18  Glynn Foster  <glynn.foster@sun.com>
 
 	* applet.c: * basep-widget.c: * basep-widget.h: * button-widget.c: 
